# ler_sheets_em_paralelo

./: .gitignore  README.md  pyproject.toml
src/: enviar_para_pasta_no_drive.py  general_helpers.py  gerar_tabelas.py  google_autenticator.py  listar_planilhas.py  seq_vs_paralel.ipynb
